Se agrega palabra al titulo

--- a/dashboard.html
+++ b/dashboard.html
@@ -17,7 +17,7 @@
             <hr>
             <div class="row">
                 <div class="col-lg-6" id="enunciado">
-                    <h5>Enunciado del ejercicio</h5>
+                    <h5>Enunciado del ejercicio o Taller</h5>
                     <article id="enunciado1">
                         <p>
                         <ul>
